Fix overflow and scroll problems in feed select modal
This might cause a regression with dropdowns in modals, I have to test
that still.

Pagination controls now fit in mobile views and don't overflow.

--- a/assets/sass/components/paginator.scss
+++ b/assets/sass/components/paginator.scss
@@ -17,6 +17,10 @@
   gap: $space;
   align-items: center;
 
+  li {
+    white-space: nowrap;
+  }
+
   .disabled a {
     pointer-events: none;
     color: var(--color-muted);
@@ -27,5 +31,16 @@
   }
   .active a {
     @extend .button-secondary;
+  }
+}
+
+@media (max-width: $breakpoint-phone) {
+  .pagination li {
+    display: none;
+  }
+  li.active,
+  li.next,
+  li.prev {
+    display: block;
   }
 }
