--- a/assets/sass/elements.scss
+++ b/assets/sass/elements.scss
@@ -59,7 +59,7 @@ dialog {
   position: fixed;
   padding: calc($space * 4) calc($space * 5);
   z-index: $z-modal;
-  overflow: visible;
+  overflow: scroll;
 
   border-radius: $border-radius-large;
   border: none;
